--- a/estimate.html
+++ b/estimate.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Get Estimate | Bellevue Electrician</title>
+  <title>Free Electrical Estimate | Bellevue Electrician Quote Request</title>
+  <meta name="description" content="Request your free electrical estimate from Bellevue Electrician. Get transparent pricing for residential, commercial, and emergency electrical services in Bellevue, WA.">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
   <link rel="stylesheet" href="css/global.css" />
   <link rel="stylesheet" href="css/estimate.css" />
   <link rel="stylesheet" href="css/header.css" />
   <link rel="stylesheet" href="css/footer.css" />
+  <link rel="icon" type="image/png" href="favicon.png">
+
 </head>
 <body>
   <!-- Domain For sell-->
@@ -26,7 +29,7 @@
         <a href="about.html">About</a>
         <a href="projects.html">Projects</a>
         <a href="testimonials.html">Testimonials</a>
-        <a href="estimate.html"  class="active">Get Estimate</a>
+        <a href="estimate.html" class="active">Get Estimate</a>
         <a href="contact.html">Contact</a>
       </nav>
     </div>
@@ -35,9 +38,9 @@
   <!-- Estimate Section -->
   <section class="estimate-section">
     <div class="container">
-      <h1>Request a Free Estimate</h1>
+      <h1>Request Your Free Electrical Estimate in Bellevue</h1>
       <p class="section-subtitle">
-        Tell us about your project, and we’ll provide a free, no-obligation quote.
+        Get a fast and accurate quote for your electrical project — whether residential, commercial, or emergency.
       </p>
 
       <form class="estimate-form" action="#" method="POST">
@@ -45,40 +48,54 @@
           <input type="text" name="name" placeholder="Your Name" required />
           <input type="email" name="email" placeholder="Your Email" required />
           <input type="text" name="phone" placeholder="Your Phone Number" required />
-          <input type="text" name="service" placeholder="Type of Service Needed" required />
+          <input type="text" name="service" placeholder="Type of Service Needed (e.g. lighting, rewiring...)" required />
         </div>
 
         <textarea
           name="details"
           rows="5"
-          placeholder="Describe your project or issue..."
+          placeholder="Describe your electrical project or issue in detail..."
           required
         ></textarea>
 
-        <button type="submit">Get My Estimate</button>
+        <button type="submit">Get My Free Estimate</button>
       </form>
+
+      <!-- Added internal link and content for SEO -->
+      <div class="estimate-info" style="margin-top: 30px;">
+        <h2>Why Request an Estimate from Bellevue Electrician?</h2>
+        <ul>
+          <li>✔ Transparent, upfront pricing — no hidden fees</li>
+          <li>✔ Licensed and insured electricians</li>
+          <li>✔ Fast response for urgent and scheduled jobs</li>
+          <li>✔ Free estimates for both homes and businesses</li>
+        </ul>
+        <p>
+          Learn more about our <a href="services.html">electrical services</a> or check <a href="testimonials.html">customer reviews</a> from Bellevue clients who trust us with their projects.
+        </p>
+      </div>
     </div>
   </section>
 
   <!-- ===== FOOTER ===== -->
-<footer class="footer">
-  <div class="container">
-    <p class="footer-info">
-      📍 Bellevue, WA &nbsp; | &nbsp; ☎ (425) 555-0134 &nbsp; | &nbsp; ✉ info@bellevueelectrician.com
-    </p>
+  <footer class="footer">
+    <div class="container">
+      <p class="footer-info">
+        📍 Bellevue, WA &nbsp; | &nbsp; ☎ (425) 555-0134 &nbsp; | &nbsp; ✉ info@bellevueelectrician.com
+      </p>
 
-    <div class="footer-social">
-      <a href="#" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-      <a href="#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-      <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+      <div class="footer-social">
+        <a href="#" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+      </div>
+
+      <p class="footer-copy">
+        © 2025 Bellevue Electrician — All rights reserved.<br>
+        <span class="designer">Designed by <strong>Mouad Kaismoune</strong></span>
+      </p>
     </div>
-
-    <p class="footer-copy">
-      © 2025 Bellevue Electrician — All rights reserved.<br>
-      <span class="designer">Designed by <strong>Mouad Kaismoune</strong></span>
-    </p>
-  </div>
-</footer>
+  </footer>
 
   <script src="script.js"></script>
 </body>
