--- a/index.html
+++ b/index.html
@@ -4,7 +4,29 @@
   <meta name="google-site-verification" content="ZNBhF7rzGPoMLoIcvGkI0mgN45crqAaCSZRVnu7FZB4" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Bellevue Electrician | Professional Electrical Services</title>
+  <link rel="icon" type="image/png" href="favicon.png">
+
+  <!-- ✅ Optimized Title Tag -->
+  <title>Bellevue Electrician | Trusted Electrical Contractors Near You in Bellevue, WA</title>
+
+  <!-- ✅ Optimized Meta Description -->
+  <meta name="description" content="Need a licensed electrician in Bellevue, WA? Our local experts provide fast residential, commercial, and emergency electrical services. Call now or request your free estimate online.">
+
+  <!-- ✅ Additional SEO Meta Tags -->
+  <meta name="keywords" content="Bellevue electrician, electrical contractor Bellevue WA, emergency electrician Bellevue, commercial electrical services, residential wiring Bellevue, electricians near Bellevue WA, licensed Bellevue electricians">
+  <meta name="robots" content="index, follow" />
+
+  <!-- ✅ Open Graph for social sharing -->
+  <meta property="og:title" content="Bellevue Electrician | Professional Electrical Services Near You" />
+  <meta property="og:description" content="Trusted electricians in Bellevue, WA offering residential, commercial, and emergency services. Get your free estimate today!" />
+  <meta property="og:url" content="https://bellevueelectrician.com/" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://bellevueelectrician.com/images/hero/electrician-team.jpg" />
+
+  <!-- ✅ Canonical URL -->
+  <link rel="canonical" href="https://bellevueelectrician.com/" />
+
+  <!-- ✅ Styles -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
   <link rel="stylesheet" href="css/global.css" />
   <link rel="stylesheet" href="css/style.css" />
@@ -13,9 +35,37 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
+
+  <!-- ✅ Local Business Schema Markup -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Electrician",
+    "name": "Bellevue Electrician",
+    "image": "https://bellevueelectrician.com/images/hero/electrician-team.jpg",
+    "@id": "https://bellevueelectrician.com/",
+    "url": "https://bellevueelectrician.com/",
+    "telephone": "+14255550134",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "123 Bellevue Ave",
+      "addressLocality": "Bellevue",
+      "addressRegion": "WA",
+      "postalCode": "98004",
+      "addressCountry": "US"
+    },
+    "openingHours": "Mo-Sa 08:00-18:00",
+    "sameAs": [
+      "https://www.facebook.com/",
+      "https://www.instagram.com/",
+      "https://www.linkedin.com/"
+    ]
+  }
+  </script>
 </head>
+
 <body>
-  <!-- Domain For sell-->
+  <!-- Domain For Sale -->
   <div class="domain-sale-banner">
     <a target="_blank" href="domain-for-sale.html" style="color:white;">🚀 This domain <strong>BellevueElectrician.com</strong> is for sale – Click for details</a>
   </div>
@@ -23,7 +73,7 @@
   <!-- HEADER -->
   <header class="header">
     <div class="container">
-      <div class="logo">⚡ Bellevue Electrician</div>
+      <div class="logo"><a href="index.html" style="color:inherit; text-decoration:none;">⚡ Bellevue Electrician</a></div>
       <nav class="nav">
         <a href="index.html" class="active">Home</a>
         <a href="services.html">Services</a>
@@ -39,33 +89,34 @@
   <!-- HERO SECTION -->
   <section class="hero">
     <div class="hero-content">
-      <h1>Your Trusted Electricians in Bellevue</h1>
-      <p>Licensed, insured, and ready to power your home or business safely.</p>
-      <a href="estimate.html" class="btn">Get a Free Estimate</a>
+      <h1>Licensed Electricians in Bellevue, WA You Can Trust</h1>
+      <p>We provide professional, safe, and affordable electrical services for homes and businesses. We also offer <a href="services.html">full electrical services in Bellevue</a> for residential and commercial clients.</p>
+      <a href="estimate.html" class="btn">Request a Free Estimate</a>
     </div>
   </section>
 
   <!-- SERVICES -->
   <section class="services reveal">
     <div class="container">
-      <h2>Our Main Services</h2>
+      <h2>Our Main Electrical Services</h2>
       <div class="service-list">
         <div class="service">
-          <img src="images/services/residential.jpg" alt="Residential Electrical" />
+          <img src="images/services/residential.jpg" alt="Residential electrical services in Bellevue WA by Bellevue Electrician" />
           <h3>Residential Electrical</h3>
-          <p>Wiring, lighting, and troubleshooting for homes and apartments.</p>
+          <p>Complete wiring, lighting, upgrades, and troubleshooting for houses, condos, and apartments.</p>
         </div>
         <div class="service">
-          <img src="images/services/commercial.jpg" alt="Commercial Electrical" />
+          <img src="images/services/commercial.jpg" alt="Commercial electrical services in Bellevue WA by Bellevue Electrician" />
           <h3>Commercial Electrical</h3>
-          <p>Reliable electrical systems for offices, stores, and warehouses.</p>
+          <p>Efficient electrical systems for offices, shops, and industrial buildings.</p>
         </div>
         <div class="service">
-          <img src="images/services/emergency.jpg" alt="Emergency Repair" />
+          <img src="images/services/emergency.jpg" alt="24/7 emergency electrician in Bellevue WA by Bellevue Electrician" />
           <h3>Emergency Repair</h3>
-          <p>24/7 emergency services when you need help fast.</p>
+          <p>24/7 electrical repairs available for outages, faults, or urgent issues.</p>
         </div>
       </div>
+      <p style="text-align:center; margin-top:10px;"><a href="services.html">View all Bellevue electrical services</a></p>
     </div>
   </section>
 
@@ -74,179 +125,163 @@
     <div class="container">
       <h2>Why Choose Bellevue Electrician?</h2>
       <ul>
-        <li>✅ Licensed & Insured Technicians</li>
+        <li>✅ Licensed & Insured Bellevue Electricians</li>
         <li>⚡ Fast, Reliable, and Safe Service</li>
         <li>🏆 Over 10 Years of Local Experience</li>
         <li>📞 Transparent Pricing – No Hidden Fees</li>
       </ul>
+      <p>We’re a trusted <strong>Bellevue electrical company</strong> serving both residential and commercial clients with top-rated service.</p>
     </div>
   </section>
 
-    <!-- ABOUT PREVIEW SECTION -->
+  <!-- ABOUT PREVIEW SECTION -->
   <section class="home-about reveal">
     <div class="container">
       <div class="about-content">
         <div class="about-text">
           <h2>About Bellevue Electrician</h2>
           <p>
-            We’re a team of licensed professionals serving Bellevue and nearby areas. 
-            Our focus is on safety, reliability, and exceptional customer service for both 
-            residential and commercial clients. From small repairs to full electrical installations — 
-            we’ve got you covered.
+            Our licensed Bellevue electricians proudly serve the area with top-quality workmanship. 
+            From small home repairs to complete electrical installations, 
+            we ensure safety, compliance, and reliability in every project.
           </p>
-          <a href="about.html" class="btn">Learn More</a>
+          <a href="about.html" class="btn">Learn More About Us</a>
         </div>
         <div class="about-image">
-          <img src="images/hero/electrician-team.jpg" alt="Bellevue Electrician Team">
+          <img src="images/hero/electrician-team.jpg" alt="Team of Bellevue Electricians at work">
         </div>
       </div>
     </div>
   </section>
 
-<!-- PROJECTS PREVIEW SECTION -->
-<section class="home-projects reveal">
-  <div class="container">
-    <h2>Our Recent Projects</h2>
+  <!-- PROJECTS PREVIEW SECTION -->
+  <section class="home-projects reveal">
+    <div class="container">
+      <h2>Electrical Projects Completed by Our Bellevue Team</h2>
 
-    <div class="project-row">
-      <div class="project-text">
-        <h3>Residential Wiring Upgrade</h3>
-        <p>We completed a full rewiring for a modern family home in downtown Bellevue, ensuring complete safety and compliance with all electrical codes.</p>
+      <div class="project-row">
+        <div class="project-text">
+          <h3>Residential Wiring Upgrade</h3>
+          <p>Full rewiring for a family home in downtown Bellevue — ensuring complete safety and compliance. See more of our <a href="projects.html">recent electrical projects</a>.</p>
+        </div>
+        <div class="project-image">
+          <img src="images/projects/bellevue-residential-wiring.jpg" alt="Home wiring upgrade project Bellevue WA by Bellevue Electrician">
+        </div>
       </div>
-      <div class="project-image">
-        <img src="images/projects/project1.jpg" alt="Residential Wiring Project">
+
+      <div class="project-row reverse">
+        <div class="project-text">
+          <h3>Office Lighting Installation</h3>
+          <p>Installed energy-efficient LED lighting in a local office, reducing costs by 35% and improving ambiance.</p>
+        </div>
+        <div class="project-image">
+          <img src="images/projects/bellevue-office-lighting-installation.jpg" alt="LED office lighting installation Bellevue WA by Bellevue Electrician">
+        </div>
       </div>
+
+      <div class="project-row">
+        <div class="project-text">
+          <h3>Commercial Panel Replacement</h3>
+          <p>Replaced old panels for a commercial building in Bellevue East — boosting performance and reliability.</p>
+        </div>
+        <div class="project-image">
+          <img src="images/projects/bellevue-commercial-panel-replacement.jpg" alt="Commercial electrical panel replacement Bellevue WA by Bellevue Electrician">
+        </div>
+      </div>
+
+      <a href="projects.html" class="btn">View All Projects</a>
     </div>
+  </section>
 
-    <div class="project-row reverse">
-      <div class="project-text">
-        <h3>Office Lighting Installation</h3>
-        <p>Installed advanced LED lighting for a local office, reducing energy costs by 35% while improving the working environment.</p>
+  <!-- TESTIMONIALS -->
+  <section class="home-testimonials reveal">
+    <div class="container">
+      <h2>Customer Testimonials</h2>
+      <p class="section-subtitle">Real feedback from happy customers across Bellevue and King County.</p>
+
+      <div class="testimonials-grid">
+        <div class="testimonial-card">
+          <p>“Bellevue Electrician did an amazing job rewiring our home. Professional, on time, and very clean work.”</p>
+          <h3>- Sarah M.</h3>
+        </div>
+        <div class="testimonial-card">
+          <p>“Quick response during an emergency! They fixed our power outage within an hour. Highly recommend!”</p>
+          <h3>- James R.</h3>
+        </div>
+        <div class="testimonial-card">
+          <p>“Great service and fair pricing. The team explained everything clearly and did a perfect installation.”</p>
+          <h3>- Lisa T.</h3>
+        </div>
       </div>
-      <div class="project-image">
-        <img src="images/projects/project2.jpg" alt="Office Lighting Installation">
-      </div>
+
+      <a href="testimonials.html" class="btn">Read More Testimonials</a>
     </div>
+  </section>
 
-    <div class="project-row">
-      <div class="project-text">
-        <h3>Commercial Panel Replacement</h3>
-        <p>Replaced outdated electrical panels for a commercial complex in Bellevue East, improving power efficiency and reliability.</p>
-      </div>
-      <div class="project-image">
-        <img src="images/projects/project3.jpg" alt="Commercial Panel Replacement">
-      </div>
-    </div>
+  <!-- ESTIMATE SECTION -->
+  <section class="home-estimate reveal">
+    <div class="container">
+      <h2>Request a Free Electrical Estimate</h2>
+      <p class="section-subtitle">Tell us about your electrical project, and our Bellevue team will send you a detailed quote.</p>
 
-    <a href="projects.html" class="btn">View All Projects</a>
-  </div>
-</section>
-
-<!-- TESTIMONIALS PREVIEW SECTION -->
-<section class="home-testimonials reveal">
-  <div class="container">
-    <h2>What Our Clients Say</h2>
-    <p class="section-subtitle">Real feedback from satisfied customers in Bellevue and nearby areas.</p>
-
-    <div class="testimonials-grid">
-      <div class="testimonial-card">
-        <p>“Bellevue Electrician did an amazing job rewiring our home. Professional, on time, and very clean work.”</p>
-        <h3>- Sarah M.</h3>
-      </div>
-
-      <div class="testimonial-card">
-        <p>“Quick response during an emergency! They fixed our power outage within an hour. Highly recommend!”</p>
-        <h3>- James R.</h3>
-      </div>
-
-      <div class="testimonial-card">
-        <p>“Great service and fair pricing. The team explained everything clearly and did a perfect installation.”</p>
-        <h3>- Lisa T.</h3>
-      </div>
-    </div>
-
-    <a href="testimonials.html" class="btn">Read More Testimonials</a>
-  </div>
-</section>
-
-<!-- ===== GET ESTIMATE SECTION (Embedded in Home Page) ===== -->
-<section class="home-estimate reveal">
-  <div class="container">
-    <h2>Request a Free Estimate</h2>
-    <p class="section-subtitle">
-      Tell us about your electrical project, and our team will provide a free, no-obligation quote.
-    </p>
-
-    <form class="estimate-form" action="#" method="POST">
-      <div class="form-grid">
-        <input type="text" name="name" placeholder="Your Name" required />
-        <input type="email" name="email" placeholder="Your Email" required />
-        <input type="text" name="phone" placeholder="Your Phone Number" required />
-        <input type="text" name="service" placeholder="Type of Service Needed" required />
-      </div>
-
-      <textarea
-        name="details"
-        rows="5"
-        placeholder="Describe your project or issue..."
-        required
-      ></textarea>
-
-      <button type="submit">Get My Estimate</button>
-    </form>
-  </div>
-</section>
-
-<!-- ===== CONTACT SECTION (Embedded in Home Page) ===== -->
-<section class="home-contact reveal">
-  <div class="container">
-    <h2>Get in Touch</h2>
-    <p class="section-subtitle">
-      Have a question or need electrical assistance? Reach out to us anytime.
-    </p>
-
-    <div class="contact-grid">
-      <!-- Contact Info -->
-      <div class="contact-info">
-        <h3>Contact Information</h3>
-        <p><strong>Address:</strong> 123 Bellevue Ave, Bellevue, WA</p>
-        <p><strong>Phone:</strong> (425) 555-0199</p>
-        <p><strong>Email:</strong> info@bellevueelectrician.com</p>
-        <p><strong>Hours:</strong> Mon – Sat: 8AM – 6PM</p>
-      </div>
-
-      <!-- Contact Form -->
-      <form class="contact-form" action="#" method="POST">
-        <input type="text" name="name" placeholder="Your Name" required />
-        <input type="email" name="email" placeholder="Your Email" required />
-        <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-        <button type="submit">Send Message</button>
+      <form class="estimate-form" action="#" method="POST">
+        <div class="form-grid">
+          <input type="text" name="name" placeholder="Your Name" required />
+          <input type="email" name="email" placeholder="Your Email" required />
+          <input type="text" name="phone" placeholder="Your Phone Number" required />
+          <input type="text" name="service" placeholder="Type of Service Needed" required />
+        </div>
+        <textarea name="details" rows="5" placeholder="Describe your project or issue..." required></textarea>
+        <button type="submit">Get My Estimate</button>
       </form>
     </div>
-  </div>
-</section>
+  </section>
 
-<!-- ===== FOOTER ===== -->
-<footer class="footer">
-  <div class="container">
-    <p class="footer-info">
-      📍 Bellevue, WA &nbsp; | &nbsp; ☎ (425) 555-0134 &nbsp; | &nbsp; ✉ info@bellevueelectrician.com
-    </p>
+  <!-- CONTACT SECTION -->
+  <section class="home-contact reveal">
+    <div class="container">
+      <h2>Contact Bellevue Electrician</h2>
+      <p class="section-subtitle">Have a question or need assistance? Contact our local Bellevue electrical team today.</p>
 
-    <div class="footer-social">
-      <a href="#" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-      <a href="#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-      <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+      <div class="contact-grid">
+        <div class="contact-info">
+          <h3>Contact Information</h3>
+          <p><strong>Address:</strong> 123 Bellevue Ave, Bellevue, WA</p>
+          <p><strong>Phone:</strong> (425) 555-0199</p>
+          <p><strong>Email:</strong> info@bellevueelectrician.com</p>
+          <p><strong>Hours:</strong> Mon – Sat: 8AM – 6PM</p>
+        </div>
+
+        <form class="contact-form" action="#" method="POST">
+          <input type="text" name="name" placeholder="Your Name" required />
+          <input type="email" name="email" placeholder="Your Email" required />
+          <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+          <button type="submit">Send Message</button>
+        </form>
+      </div>
     </div>
+  </section>
 
-    <p class="footer-copy">
-      © 2025 Bellevue Electrician — All rights reserved.<br>
-      <span class="designer">Designed by <strong>Mouad Kaismoune</strong></span>
-    </p>
-  </div>
-</footer>
+  <!-- FOOTER -->
+  <footer class="footer">
+    <div class="container">
+      <p class="footer-info">
+        📍 Bellevue, WA &nbsp; | &nbsp; ☎ (425) 555-0134 &nbsp; | &nbsp; ✉ info@bellevueelectrician.com
+      </p>
+
+      <div class="footer-social">
+        <a href="#" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+      </div>
+
+      <p class="footer-copy">
+        © 2025 Bellevue Electrician — All rights reserved.<br>
+        <span class="designer">Designed by <strong>Mouad Kaismoune</strong></span>
+      </p>
+    </div>
+  </footer>
 
   <script src="js/main.js"></script>
 </body>
 </html>
-
