--- a/projects.html
+++ b/projects.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Our Projects - Bellevue Electrician</title>
+  <title>Electrical Projects in Bellevue | Professional Installations & Upgrades</title>
+  <meta name="description" content="View Bellevue Electrician’s completed electrical projects — from home wiring upgrades to commercial lighting installations. Trusted electricians serving Bellevue, WA.">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
   <link rel="stylesheet" href="css/global.css" />
   <link rel="stylesheet" href="css/projects.css" />
   <link rel="stylesheet" href="css/header.css" />
   <link rel="stylesheet" href="css/footer.css" />
+  <link rel="icon" type="image/png" href="favicon.png">
+
 </head>
 <body>
   <!-- Domain For sell-->
@@ -35,56 +38,60 @@
   <!-- ===== HERO SECTION ===== -->
   <section class="hero full-hero" style="background-image: url('images/hero/electrical-projects.jpg');">
     <div class="hero-content">
-      <h1>Our Recent Projects</h1>
-      <p>Explore some of our professional electrical installations and upgrades across Bellevue.</p>
+      <h1>Our Recent Electrical Projects in Bellevue</h1>
+      <p>Explore professional electrical installations and upgrades completed by our licensed Bellevue electricians.</p>
     </div>
   </section>
 
   <!-- ===== PROJECTS SECTION ===== -->
   <section class="projects-section">
     <div class="container">
-      <h2>Completed Projects</h2>
+      <h2>Completed Electrical Projects</h2>
 
       <div class="projects-grid">
         <div class="project-card">
-          <img src="images/projects/project1.jpg" alt="Residential Wiring Project">
-          <h3>Residential Wiring Upgrade</h3>
-          <p>Complete rewiring for a modern family home in downtown Bellevue, ensuring full code compliance and safety.</p>
+          <img loading="lazy" src="images/projects/bellevue-residential-wiring.jpg" alt="Residential electrical wiring upgrade in Bellevue WA">
+          <h3>Bellevue Residential Wiring Upgrade</h3>
+          <p>Complete rewiring for a modern family home in downtown Bellevue, ensuring full code compliance, safety, and energy efficiency.</p>
         </div>
 
         <div class="project-card">
-          <img src="images/projects/project2.jpg" alt="Office Lighting Installation">
-          <h3>Office Lighting Installation</h3>
-          <p>Installed energy-efficient LED systems for a local office space, reducing power consumption by 35%.</p>
+          <img loading="lazy" src="images/projects/bellevue-office-lighting-installation.jpg" alt="Office LED lighting installation in Bellevue Washington">
+          <h3>Office LED Lighting Installation</h3>
+          <p>Installed energy-efficient LED lighting systems for a local Bellevue office space, reducing power consumption by 35% while enhancing brightness.</p>
         </div>
 
         <div class="project-card">
-          <img src="images/projects/project3.jpg" alt="Commercial Panel Replacement">
-          <h3>Commercial Panel Replacement</h3>
-          <p>Upgraded main electrical panels and improved power distribution for a commercial building in Bellevue East.</p>
+          <img loading="lazy" src="images/projects/bellevue-commercial-panel-replacement.jpg" alt="Commercial electrical panel replacement Bellevue WA">
+          <h3>Commercial Electrical Panel Replacement</h3>
+          <p>Upgraded main electrical panels and improved power distribution for a commercial building in Bellevue East, increasing reliability and performance.</p>
         </div>
       </div>
+
+      <p style="margin-top: 30px;">
+        Looking for more examples? Check our <a href="services.html">electrical services</a> or read what our clients say in <a href="testimonials.html">testimonials</a>.
+      </p>
     </div>
   </section>
 
   <!-- ===== FOOTER ===== -->
-<footer class="footer">
-  <div class="container">
-    <p class="footer-info">
-      📍 Bellevue, WA &nbsp; | &nbsp; ☎ (425) 555-0134 &nbsp; | &nbsp; ✉ info@bellevueelectrician.com
-    </p>
+  <footer class="footer">
+    <div class="container">
+      <p class="footer-info">
+        📍 Bellevue, WA &nbsp; | &nbsp; ☎ (425) 555-0134 &nbsp; | &nbsp; ✉ info@bellevueelectrician.com
+      </p>
 
-    <div class="footer-social">
-      <a href="#" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-      <a href="#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-      <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+      <div class="footer-social">
+        <a href="#" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+      </div>
+
+      <p class="footer-copy">
+        © 2025 Bellevue Electrician — All rights reserved.<br>
+        <span class="designer">Designed by <strong>Mouad Kaismoune</strong></span>
+      </p>
     </div>
-
-    <p class="footer-copy">
-      © 2025 Bellevue Electrician — All rights reserved.<br>
-      <span class="designer">Designed by <strong>Mouad Kaismoune</strong></span>
-    </p>
-  </div>
-</footer>
+  </footer>
 </body>
 </html>
