--- a/services.html
+++ b/services.html
@@ -3,7 +3,30 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Our Electrical Services | Bellevue Electrician</title>
+  <link rel="icon" type="image/png" href="favicon.png">
+
+
+  <!-- ✅ Optimized Title -->
+  <title>Electrical Services in Bellevue, WA | Residential & Commercial Electricians</title>
+
+  <!-- ✅ Optimized Meta Description -->
+  <meta name="description" content="Bellevue Electrician provides expert residential, commercial, and emergency electrical services across Bellevue, WA. Call (425) 555-0134 for fast, safe, and affordable solutions.">
+
+  <!-- ✅ SEO Keywords -->
+  <meta name="keywords" content="Bellevue electrician, electrical services Bellevue, commercial electrician Bellevue, residential electrician Bellevue, 24/7 emergency electrician WA">
+
+  <meta name="robots" content="index, follow" />
+
+  <!-- ✅ Open Graph -->
+  <meta property="og:title" content="Bellevue Electrician | Professional Electrical Services in Bellevue WA" />
+  <meta property="og:description" content="Reliable and licensed electrical contractors serving Bellevue, WA. Offering installation, repair, and emergency electrical services." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://bellevueelectrician.com/services.html" />
+  <meta property="og:image" content="https://bellevueelectrician.com/images/hero/electrician-tools.jpg" />
+
+  <!-- ✅ Canonical -->
+  <link rel="canonical" href="https://bellevueelectrician.com/services.html" />
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
   <link rel="stylesheet" href="css/global.css" />
   <link rel="stylesheet" href="css/services.css" />
@@ -11,8 +34,9 @@
   <link rel="stylesheet" href="css/footer.css" />
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
+
 <body>
-  <!-- Domain For sell-->
+  <!-- Domain For Sell -->
   <div class="domain-sale-banner">
     <a target="_blank" href="domain-for-sale.html" style="color:white;">🚀 This domain <strong>BellevueElectrician.com</strong> is for sale – Click for details</a>
   </div>
@@ -20,7 +44,7 @@
   <!-- HEADER -->
   <header class="header">
     <div class="container">
-      <div class="logo">⚡ Bellevue Electrician</div>
+      <div class="logo"><a href="index.html" style="color:inherit;text-decoration:none;">⚡ Bellevue Electrician</a></div>
       <nav class="nav">
         <a href="index.html">Home</a>
         <a href="services.html" class="active">Services</a>
@@ -36,85 +60,124 @@
   <!-- HERO SECTION -->
   <section class="hero full-hero" style="background-image: url('images/hero/electrician-tools.jpg');">
     <div class="hero-content">
-      <h1>Professional Electrical Services</h1>
-      <p>Reliable. Safe. Affordable. Serving Bellevue and nearby areas.</p>
+      <h1>Professional Electrical Services in Bellevue, WA</h1>
+      <p>Reliable. Safe. Affordable. Serving homes and businesses across Bellevue and nearby areas.</p>
     </div>
   </section>
 
   <!-- SERVICES DETAILS -->
   <section class="services-detail">
     <div class="container">
-      <h2>What We Offer</h2>
+      <h2>Our Electrical Services</h2>
+      <p style="text-align:center; max-width:700px; margin:0 auto 30px;">We’re your trusted electricians in Bellevue, WA — delivering top-rated electrical solutions for homes, offices, and commercial buildings.</p>
+      
       <div class="service-grid">
         <div class="service-card">
-          <img src="images/services/residential.jpg" alt="Residential Electrical">
+          <img src="images/services/residential.jpg" alt="Residential electrical services Bellevue WA">
           <h3>Residential Electrical</h3>
-          <p>We handle all your home electrical needs — from lighting upgrades to complete rewiring. Our certified electricians ensure safety and efficiency in every job.</p>
+          <p>We handle all your home electrical needs — from lighting upgrades to full home rewiring. Our licensed electricians in Bellevue ensure safety, efficiency, and lasting quality.</p>
         </div>
 
         <div class="service-card">
-          <img src="images/services/commercial.jpg" alt="Commercial Electrical">
+          <img src="images/services/commercial.jpg" alt="Commercial electrical services Bellevue">
           <h3>Commercial Electrical</h3>
-          <p>We provide reliable electrical systems for offices, retail spaces, and warehouses. Count on us for installation, maintenance, and emergency repair.</p>
+          <p>Providing reliable electrical systems for offices, retail spaces, and warehouses. From installations to repairs — we help Bellevue businesses stay powered and safe.</p>
         </div>
 
         <div class="service-card">
-          <img src="images/services/emergency.jpg" alt="Emergency Electrical">
+          <img src="images/services/emergency.jpg" alt="24/7 emergency electrician Bellevue WA">
           <h3>24/7 Emergency Services</h3>
-          <p>Electrical emergencies can’t wait. We’re available 24 hours a day to restore power safely and quickly in your home or business.</p>
+          <p>Power outage or electrical failure? We’re available 24/7 to restore power quickly and safely for your home or commercial property.</p>
         </div>
 
         <div class="service-card">
-          <img src="images/services/lighting.jpg" alt="Lighting Installation">
+          <img src="images/services/lighting.jpg" alt="Lighting installation Bellevue electrician">
           <h3>Lighting Installation</h3>
-          <p>Enhance your space with professional indoor and outdoor lighting. We install energy-efficient lighting systems that save you money and add beauty.</p>
+          <p>Upgrade your home or business with modern, energy-efficient lighting systems. Our team provides professional indoor and outdoor lighting solutions across Bellevue.</p>
         </div>
 
         <div class="service-card">
-          <img src="images/services/panel-upgrade.jpg" alt="Panel Upgrade">
+          <img src="images/services/panel-upgrade.jpg" alt="Electrical panel upgrade Bellevue">
           <h3>Electrical Panel Upgrades</h3>
-          <p>Outdated electrical panels can be dangerous. We replace and upgrade panels to meet modern energy demands and improve safety.</p>
+          <p>We replace outdated panels to improve safety and handle modern power demands — ensuring your property is up to code and energy efficient.</p>
         </div>
 
         <div class="service-card">
-          <img src="images/services/inspection.jpg" alt="Inspection & Maintenance">
+          <img src="images/services/inspection.jpg" alt="Electrical inspection and maintenance Bellevue">
           <h3>Inspection & Maintenance</h3>
-          <p>We perform safety inspections and preventive maintenance to keep your electrical systems running smoothly year-round.</p>
+          <p>Prevent issues before they happen. We offer routine electrical inspections and maintenance to keep your systems running safely and efficiently all year.</p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- CALL TO ACTION -->
+  <!-- ✅ Internal Linking Recommendation -->
   <section class="cta reveal">
     <div class="container">
-      <h2>Need an Electrician You Can Trust?</h2>
-      <p>Get your free quote today and experience professional electrical work with Bellevue Electrician.</p>
+      <h2>Need an Electrician You Can Trust in Bellevue?</h2>
+      <p>Get your <a href="estimate.html">free electrical estimate</a> or <a href="contact.html">contact us</a> to schedule service with our licensed professionals.</p>
       <a href="estimate.html" class="btn">Request Free Estimate</a>
     </div>
   </section>
 
-  <!-- ===== FOOTER ===== -->
-<footer class="footer">
-  <div class="container">
-    <p class="footer-info">
-      📍 Bellevue, WA &nbsp; | &nbsp; ☎ (425) 555-0134 &nbsp; | &nbsp; ✉ info@bellevueelectrician.com
-    </p>
+  <!-- FOOTER -->
+  <footer class="footer">
+    <div class="container">
+      <p class="footer-info">
+        📍 Bellevue, WA &nbsp; | &nbsp; ☎ (425) 555-0134 &nbsp; | &nbsp; ✉ info@bellevueelectrician.com
+      </p>
 
-    <div class="footer-social">
-      <a href="#" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-      <a href="#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-      <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+      <div class="footer-social">
+        <a href="#" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+      </div>
+
+      <p class="footer-copy">
+        © 2025 Bellevue Electrician — All rights reserved.<br>
+        <span class="designer">Designed by <strong>Mouad Kaismoune</strong></span>
+      </p>
     </div>
+  </footer>
 
-    <p class="footer-copy">
-      © 2025 Bellevue Electrician — All rights reserved.<br>
-      <span class="designer">Designed by <strong>Mouad Kaismoune</strong></span>
-    </p>
-  </div>
-</footer>
+  <!-- ✅ Structured Data for Local Services -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Service",
+    "serviceType": "Electrical Services",
+    "provider": {
+      "@type": "LocalBusiness",
+      "name": "Bellevue Electrician",
+      "image": "https://bellevueelectrician.com/images/hero/electrician-tools.jpg",
+      "telephone": "+1-425-555-0134",
+      "email": "info@bellevueelectrician.com",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "123 Bellevue Ave",
+        "addressLocality": "Bellevue",
+        "addressRegion": "WA",
+        "postalCode": "98004",
+        "addressCountry": "US"
+      },
+      "areaServed": "Bellevue WA",
+      "url": "https://bellevueelectrician.com/services.html"
+    },
+    "hasOfferCatalog": {
+      "@type": "OfferCatalog",
+      "name": "Bellevue Electrical Services",
+      "itemListElement": [
+        { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Residential Electrical Services" }},
+        { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Commercial Electrical Services" }},
+        { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Emergency Electrical Repairs" }},
+        { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Lighting Installation" }},
+        { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Panel Upgrade" }},
+        { "@type": "Offer", "itemOffered": { "@type": "Service", "name": "Electrical Inspection & Maintenance" }}
+      ]
+    }
+  }
+  </script>
 
   <script src="js/main.js"></script>
 </body>
 </html>
-
