--- a/testimonials.html
+++ b/testimonials.html
@@ -3,12 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Testimonials | Bellevue Electrician</title>
+  <title>Customer Reviews | Bellevue Electrician Testimonials</title>
+  <meta name="description" content="Read real customer testimonials for Bellevue Electrician. Discover why homeowners and businesses in Bellevue, WA trust us for safe, reliable electrical work.">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
   <link rel="stylesheet" href="css/global.css" />
   <link rel="stylesheet" href="css/testimonials.css" />
   <link rel="stylesheet" href="css/header.css" />
   <link rel="stylesheet" href="css/footer.css" />
+  <link rel="icon" type="image/png" href="favicon.png">
+
 </head>
 <body>
   <!-- Domain For sell-->
@@ -35,52 +38,58 @@
   <!-- Testimonials Section -->
   <section class="testimonials-section">
     <div class="container">
-      <h1>What Our Clients Say</h1>
-      <p class="section-subtitle">Real feedback from satisfied customers in Bellevue and nearby areas.</p>
+      <h1>Customer Testimonials — Bellevue Electrician</h1>
+      <p class="section-subtitle">See why homeowners and businesses in Bellevue trust our licensed electricians for quality electrical work.</p>
 
       <div class="testimonials-grid">
         <div class="testimonial-card">
-          <p>“Bellevue Electrician did an amazing job rewiring our home. Professional, on time, and very clean work.”</p>
-          <h3>- Sarah M.</h3>
+          <p>“Bellevue Electrician did an amazing job rewiring our home. Professional, on time, and very clean work. I highly recommend them for residential projects.”</p>
+          <h3>- Sarah M. (Residential Client, Bellevue)</h3>
         </div>
 
         <div class="testimonial-card">
-          <p>“Quick response during an emergency! They fixed our power outage within an hour. Highly recommend!”</p>
-          <h3>- James R.</h3>
+          <p>“Quick response during an emergency! They fixed our power outage within an hour. Fast, friendly, and reliable service.”</p>
+          <h3>- James R. (Emergency Service)</h3>
         </div>
 
         <div class="testimonial-card">
-          <p>“Great service and fair pricing. The team explained everything clearly and did a perfect installation.”</p>
-          <h3>- Lisa T.</h3>
+          <p>“Great service and fair pricing. The team explained everything clearly and did a perfect lighting installation for our new office.”</p>
+          <h3>- Lisa T. (Commercial Client)</h3>
         </div>
 
         <div class="testimonial-card">
-          <p>“We’ve worked with many electricians before, but Bellevue Electrician is by far the most reliable.”</p>
-          <h3>- Mark D.</h3>
+          <p>“We’ve worked with many electricians before, but Bellevue Electrician is by far the most reliable and trustworthy. Excellent job upgrading our panel.”</p>
+          <h3>- Mark D. (Panel Upgrade)</h3>
         </div>
+      </div>
+
+      <div class="testimonial-cta" style="margin-top: 30px;">
+        <p>Want to experience the same level of quality and reliability?</p>
+        <a href="estimate.html" class="btn">Request a Free Estimate</a>
+        <p>Or learn more about our <a href="services.html">electrical services</a> in Bellevue.</p>
       </div>
     </div>
   </section>
 
   <!-- ===== FOOTER ===== -->
-<footer class="footer">
-  <div class="container">
-    <p class="footer-info">
-      📍 Bellevue, WA &nbsp; | &nbsp; ☎ (425) 555-0134 &nbsp; | &nbsp; ✉ info@bellevueelectrician.com
-    </p>
+  <footer class="footer">
+    <div class="container">
+      <p class="footer-info">
+        📍 Bellevue, WA &nbsp; | &nbsp; ☎ (425) 555-0134 &nbsp; | &nbsp; ✉ info@bellevueelectrician.com
+      </p>
 
-    <div class="footer-social">
-      <a href="#" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-      <a href="#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-      <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+      <div class="footer-social">
+        <a href="#" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+      </div>
+
+      <p class="footer-copy">
+        © 2025 Bellevue Electrician — All rights reserved.<br>
+        <span class="designer">Designed by <strong>Mouad Kaismoune</strong></span>
+      </p>
     </div>
-
-    <p class="footer-copy">
-      © 2025 Bellevue Electrician — All rights reserved.<br>
-      <span class="designer">Designed by <strong>Mouad Kaismoune</strong></span>
-    </p>
-  </div>
-</footer>
+  </footer>
 
   <script src="script.js"></script>
 </body>
