--- a/contact.html
+++ b/contact.html
@@ -3,15 +3,44 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact | Bellevue Electrician</title>
+  <link rel="icon" type="image/png" href="favicon.png">
+
+
+  <!-- ✅ Optimized Title -->
+  <title>Contact Bellevue Electrician | Licensed Electricians in Bellevue, WA</title>
+
+  <!-- ✅ Optimized Meta Description -->
+  <meta name="description" content="Contact Bellevue Electrician today for residential, commercial, or emergency electrical services in Bellevue, WA. Call (425) 555-0199 or request a free estimate online.">
+
+  <!-- ✅ Additional SEO Meta Tags -->
+  <meta name="keywords" content="Bellevue electrician contact, electrical services Bellevue WA, licensed electrician Bellevue, emergency electrician Bellevue">
+  <meta name="robots" content="index, follow" />
+
+  <!-- ✅ Open Graph Tags -->
+  <meta property="og:title" content="Contact Bellevue Electrician | Local Electrical Contractors in Bellevue WA" />
+  <meta property="og:description" content="Get in touch with licensed electricians in Bellevue, WA. Request service or a free quote today!" />
+  <meta property="og:url" content="https://bellevueelectrician.com/contact.html" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://bellevueelectrician.com/images/hero/electrician-team.jpg" />
+
+  <!-- ✅ Canonical URL -->
+  <link rel="canonical" href="https://bellevueelectrician.com/contact.html" />
+
+  <!-- ✅ Styles -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" />
   <link rel="stylesheet" href="css/global.css" />
   <link rel="stylesheet" href="css/contact.css" />
   <link rel="stylesheet" href="css/header.css" />
   <link rel="stylesheet" href="css/footer.css" />
+
+  <!-- ✅ Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet" />
 </head>
+
 <body>
-  <!-- Domain For sell-->
+  <!-- Domain For Sale Banner -->
   <div class="domain-sale-banner">
     <a target="_blank" href="domain-for-sale.html" style="color:white;">🚀 This domain <strong>BellevueElectrician.com</strong> is for sale – Click for details</a>
   </div>
@@ -19,7 +48,7 @@
   <!-- HEADER -->
   <header class="header">
     <div class="container">
-      <div class="logo">⚡ Bellevue Electrician</div>
+      <div class="logo"><a href="index.html" style="color:inherit; text-decoration:none;">⚡ Bellevue Electrician</a></div>
       <nav class="nav">
         <a href="index.html">Home</a>
         <a href="services.html">Services</a>
@@ -32,20 +61,22 @@
     </div>
   </header>
 
-  <!-- Contact Section -->
-  <section class="contact-section ">
+  <!-- CONTACT SECTION -->
+  <section class="contact-section">
     <div class="container">
-      <h1>Get in Touch</h1>
-      <p class="section-subtitle">Have a question or need electrical assistance? Reach out to us anytime.</p>
+      <h1>Contact Bellevue Electrician</h1>
+      <p class="section-subtitle">Reach out to our licensed electricians in Bellevue, WA for fast and professional service.</p>
 
       <div class="contact-grid">
         <!-- Contact Info -->
         <div class="contact-info">
           <h2>Contact Information</h2>
           <p><strong>Address:</strong> 123 Bellevue Ave, Bellevue, WA</p>
-          <p><strong>Phone:</strong> (425) 555-0199</p>
-          <p><strong>Email:</strong> info@bellevueelectrician.com</p>
+          <p><strong>Phone:</strong> <a href="tel:+14255550199">(425) 555-0199</a></p>
+          <p><strong>Email:</strong> <a href="mailto:info@bellevueelectrician.com">info@bellevueelectrician.com</a></p>
           <p><strong>Hours:</strong> Mon – Sat: 8AM – 6PM</p>
+          <!-- ✅ Internal link suggestion -->
+          <p style="margin-top:10px;">Looking for our <a href="services.html">electrical services in Bellevue</a>?</p>
         </div>
 
         <!-- Contact Form -->
@@ -59,25 +90,49 @@
     </div>
   </section>
 
-  <!-- ===== FOOTER ===== -->
-<footer class="footer">
-  <div class="container">
-    <p class="footer-info">
-      📍 Bellevue, WA &nbsp; | &nbsp; ☎ (425) 555-0134 &nbsp; | &nbsp; ✉ info@bellevueelectrician.com
-    </p>
+  <!-- FOOTER -->
+  <footer class="footer">
+    <div class="container">
+      <p class="footer-info">
+        📍 Bellevue, WA &nbsp; | &nbsp; ☎ (425) 555-0134 &nbsp; | &nbsp; ✉ info@bellevueelectrician.com
+      </p>
 
-    <div class="footer-social">
-      <a href="#" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-      <a href="#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-      <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+      <div class="footer-social">
+        <a href="#" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+        <a href="#" target="_blank" aria-label="LinkedIn"><i class="fab fa-linkedin-in"></i></a>
+      </div>
+
+      <p class="footer-copy">
+        © 2025 Bellevue Electrician — All rights reserved.<br>
+        <span class="designer">Designed by <strong>Mouad Kaismoune</strong></span>
+      </p>
     </div>
+  </footer>
 
-    <p class="footer-copy">
-      © 2025 Bellevue Electrician — All rights reserved.<br>
-      <span class="designer">Designed by <strong>Mouad Kaismoune</strong></span>
-    </p>
-  </div>
-</footer>
+  <!-- ✅ LocalBusiness Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Electrician",
+    "name": "Bellevue Electrician",
+    "image": "https://bellevueelectrician.com/images/hero/electrician-team.jpg",
+    "telephone": "+1-425-555-0199",
+    "email": "info@bellevueelectrician.com",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "123 Bellevue Ave",
+      "addressLocality": "Bellevue",
+      "addressRegion": "WA",
+      "postalCode": "98004",
+      "addressCountry": "US"
+    },
+    "openingHours": "Mo-Sa 08:00-18:00",
+    "url": "https://bellevueelectrician.com/contact.html",
+    "priceRange": "$$",
+    "areaServed": "Bellevue WA"
+  }
+  </script>
 
   <script src="script.js"></script>
 </body>
