--- a/domain-for-sale.html
+++ b/domain-for-sale.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="BellevueElectrician.com is for sale. A premium, SEO-friendly domain perfect for electrical service businesses in Bellevue.">
   <title>BellevueElectrician.com is for Sale</title>
+  <link rel="icon" type="image/png" href="favicon.png">
+
 
   <!-- External CSS -->
   <link rel="stylesheet" href="css/domain-for-sale.css">
